plugins/devkit/devkit-java-tests/testData/inspections/registrationProblems/code/AbstractApplicationComponent.java
public abstract class <error descr="Plugin component class must not be abstract">AbstractApplicationComponent</error> implements com.intellij.openapi.components.ApplicationComponent {}